# shardoverse

./: .appveyor.yml  .gitignore  .markdownlint.json  .travis.yml  Cargo.toml  LICENSE.md  README.md  appveyor.yml  shardoverse.cfg  shardoverse.ini
.cargo/: config.toml
.github/workflows/: rust.yml  shardoverse.yml
assets/cursors/gauntletCursor/: Gauntlet Cursor_by_itsmars.txt
assets/cursors/pointers/: Pointers_by_yd.txt  dig.xcf  hand.xcf  lockandkey.xcf  pointers.xcf  pointersV2.xcf
assets/cursors/pointers_part_5/: Pointers part 5_by_yd.txt  gloves.xcf
assets/cursors/rpgicons/: Roguelike_RPG Icons_by_Joe-Williamson.txt
assets/fonts/: Dragonfly-z9jl.txt  Nugie Romantic Fonts.txt
assets/graphics/2D/tiles/DungeonCrawlStoneSoupFull/: README.txt
ci/appveyor/: x86_64-pc-windows-gnu_10_install.bat  x86_64-pc-windows-gnu_20_build.bat  x86_64-pc-windows-gnu_30_test.bat  x86_64-pc-windows-gnu_40_run.bat
ci/travisci/: x86_64-apple-darwin_10_install.sh  x86_64-apple-darwin_20_script.sh  x86_64-unknown-freebsd_10_install.sh  x86_64-unknown-freebsd_20_script.sh  x86_64-unknown-linux-gnu_10_install.sh  x86_64-unknown-linux-gnu_20_script.sh
src/: assets.rs  central_core.rs  config.rs  main.rs  shardoverse.rs
src/modules/: asset.rs  assets.rs  config.rs  creature.rs  item.rs  mod.rs  pixel_draw.rs  pixel_painter.rs  shard_log.rs  shard_tool.rs
tests/: integration_tests.rs
