[package]
name        = "shardoverse"
license     = "MIT"
version     = "0.0.1"
description = "A Roguelike Peer-to-Peer Multi Player Dungeon Explorer Game written in Rust"
authors     = [
              "Christian Lunau <Christian.Lunau@gmx.de>",
              "Jaron Lunau <Jaronn.Lunau@gmx.de>",
              "Julian Lunau <Julian.Lunau@gmx.de>",
              ]
edition     = "2018"


[[bin]]
name = "shardoverse"
path = "src/main.rs"

[dependencies]
rand = "0.7.2" 
rust-ini = "0.15.3" 
clap = "~2.27.0" 
log = { version = "0.4", features = ["max_level_trace", "release_max_level_warn"] }
# flexi_logger = { version = "0.15" , features = ["ziplogs", "textfilter"]}
flexi_logger = { version = "0.15" , features = ["ziplogs", "textfilter"]}
yansi = "0.5"

[dependencies.sdl2]
  version = "0.32.1"
  default-features = false
  features = ["ttf","image","gfx","mixer"]
