[package]
name        = "shardoverse"
license     = "MIT"
version     = "0.1.0"
description = "A Roguelike Peer-to-Peer Multi Player Dungeon Explorer Game written in Rust"
authors     = [
              "Christian Lunau <Christian.Lunau@gmx.de>",
              "Jaron Lunau <Jaronn.Lunau@gmx.de>",
              "Julian Lunau <Julian.Lunau@gmx.de>",
              ]
              
edition     = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

homepage    = "https://github.com/clunion/shardoverse"
repository  = "https://github.com/clunion/shardoverse"
readme      = "README.md"
keywords    = ["rust", "bevy", "game", "game-dev", "roguelike", "git", "learning", "rust-lang", "ecs", "winit", "clap", "rust-ini"]
categories  = ["games", "roguelike"]

# [features]
# optimize = ["log/release_max_level_warn"]
# default = ["optimize"]


[[bin]]
name = "shardoverse"
path = "src/main.rs"

[dependencies]
rand = "0.7.2" 
clap = "~2.27.0" 
rust-ini = "0.15.3" 
log = { version = "0.4", features = ["max_level_trace", "release_max_level_warn"] }
flexi_logger = { version = "0.15" , features = ["ziplogs"]}
yansi = "0.5"

winit = "0.22.2"
image = "0.23"

pixels = "0.2.0"

#bevy = "0.2.1"
bevy = { git = "https://github.com/bevyengine/bevy" }
